// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selects c# 1`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="dotnet"
    />
  </div>
  <NewProjectForm
    onDelete={[Function]}
    onDone={[Function]}
  />
</div>
`;

exports[`selects c-family 1`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.c-family",
            "value": "c-family",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="c-family"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.c-family.compiler
    </h4>
    <RadioToggle
      disabled={false}
      name="c-family-compiler"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.c-family.compiler.msvc",
            "value": "msvc",
          },
          Object {
            "label": "onboarding.language.c-family.compiler.clang-gcc",
            "value": "clang-gcc",
          },
        ]
      }
      value={null}
    />
  </div>
</div>
`;

exports[`selects c-family 2`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.c-family",
            "value": "c-family",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="c-family"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.c-family.compiler
    </h4>
    <RadioToggle
      disabled={false}
      name="c-family-compiler"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.c-family.compiler.msvc",
            "value": "msvc",
          },
          Object {
            "label": "onboarding.language.c-family.compiler.clang-gcc",
            "value": "clang-gcc",
          },
        ]
      }
      value="msvc"
    />
  </div>
  <NewProjectForm
    onDelete={[Function]}
    onDone={[Function]}
  />
</div>
`;

exports[`selects c-family 3`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.c-family",
            "value": "c-family",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="c-family"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.c-family.compiler
    </h4>
    <RadioToggle
      disabled={false}
      name="c-family-compiler"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.c-family.compiler.msvc",
            "value": "msvc",
          },
          Object {
            "label": "onboarding.language.c-family.compiler.clang-gcc",
            "value": "clang-gcc",
          },
        ]
      }
      value="clang-gcc"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.os
    </h4>
    <RadioToggle
      disabled={false}
      name="os"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.os.linux",
            "value": "linux",
          },
          Object {
            "label": "onboarding.language.os.win",
            "value": "win",
          },
          Object {
            "label": "onboarding.language.os.mac",
            "value": "mac",
          },
        ]
      }
      value={null}
    />
  </div>
</div>
`;

exports[`selects c-family 4`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.c-family",
            "value": "c-family",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="c-family"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.c-family.compiler
    </h4>
    <RadioToggle
      disabled={false}
      name="c-family-compiler"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.c-family.compiler.msvc",
            "value": "msvc",
          },
          Object {
            "label": "onboarding.language.c-family.compiler.clang-gcc",
            "value": "clang-gcc",
          },
        ]
      }
      value="clang-gcc"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.os
    </h4>
    <RadioToggle
      disabled={false}
      name="os"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.os.linux",
            "value": "linux",
          },
          Object {
            "label": "onboarding.language.os.win",
            "value": "win",
          },
          Object {
            "label": "onboarding.language.os.mac",
            "value": "mac",
          },
        ]
      }
      value="linux"
    />
  </div>
  <NewProjectForm
    onDelete={[Function]}
    onDone={[Function]}
    projectKey="project-foo"
  />
</div>
`;

exports[`selects java 1`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="java"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.java.build_technology
    </h4>
    <RadioToggle
      disabled={false}
      name="java-build"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java.build_technology.maven",
            "value": "maven",
          },
          Object {
            "label": "onboarding.language.java.build_technology.gradle",
            "value": "gradle",
          },
        ]
      }
      value={null}
    />
  </div>
</div>
`;

exports[`selects java 2`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="java"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.java.build_technology
    </h4>
    <RadioToggle
      disabled={false}
      name="java-build"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java.build_technology.maven",
            "value": "maven",
          },
          Object {
            "label": "onboarding.language.java.build_technology.gradle",
            "value": "gradle",
          },
        ]
      }
      value="maven"
    />
  </div>
</div>
`;

exports[`selects java 3`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="java"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.java.build_technology
    </h4>
    <RadioToggle
      disabled={false}
      name="java-build"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java.build_technology.maven",
            "value": "maven",
          },
          Object {
            "label": "onboarding.language.java.build_technology.gradle",
            "value": "gradle",
          },
        ]
      }
      value="gradle"
    />
  </div>
</div>
`;

exports[`selects other 1`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="other"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.os
    </h4>
    <RadioToggle
      disabled={false}
      name="os"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.os.linux",
            "value": "linux",
          },
          Object {
            "label": "onboarding.language.os.win",
            "value": "win",
          },
          Object {
            "label": "onboarding.language.os.mac",
            "value": "mac",
          },
        ]
      }
      value={null}
    />
  </div>
</div>
`;

exports[`selects other 2`] = `
<div>
  <div>
    <h4
      className="spacer-bottom"
    >
      onboarding.language
    </h4>
    <RadioToggle
      disabled={false}
      name="language"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.java",
            "value": "java",
          },
          Object {
            "label": "onboarding.language.dotnet",
            "value": "dotnet",
          },
          Object {
            "label": "onboarding.language.other",
            "value": "other",
          },
        ]
      }
      value="other"
    />
  </div>
  <div
    className="big-spacer-top"
  >
    <h4
      className="spacer-bottom"
    >
      onboarding.language.os
    </h4>
    <RadioToggle
      disabled={false}
      name="os"
      onCheck={[Function]}
      options={
        Array [
          Object {
            "label": "onboarding.language.os.linux",
            "value": "linux",
          },
          Object {
            "label": "onboarding.language.os.win",
            "value": "win",
          },
          Object {
            "label": "onboarding.language.os.mac",
            "value": "mac",
          },
        ]
      }
      value="mac"
    />
  </div>
  <NewProjectForm
    onDelete={[Function]}
    onDone={[Function]}
  />
</div>
`;
